--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
   box-sizing: border-box;
 }
 
+:root {
+  --header-bg: #10375c;
+}
 /* quy doi */
 html {
   font-size: 62.5%;
@@ -11,4 +14,79 @@ html {
 body {
   font-family: "Sora", sans-serif;
   font-size: 1.6rem;
+}
+/* =======================common===================== */
+.container {
+  max-width: calc(100% - 48px);
+  width: 1170px;
+  margin: 0 auto;
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  display: inline-block;
+  min-width: 205px;
+  line-height: 60px;
+  background: #2e80ce;
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+  border-radius: 999px;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+/* =======================header===================== */
+header {
+  padding-top: 30px;
+  background: var(--header-bg);
+  /* chieu cao toi thieu se bang 100% khung nhin cua khach hang */
+  min-height: 100vh;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar__list {
+  display: flex;
+}
+.header__action--login,
+.navbar__link {
+  padding: 8px 21px;
+  color: #c9d2da;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.75; /* 175% */
+}
+.navbar__link:hover,
+.navbar__link--active {
+  text-shadow: 1px 0 0 currentColor;
+  color: #fff;
+}
+.navbar__link--active::before {
+  position: relative;
+  right: 8px;
+  top: -3px;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.header__action--sign-up {
+  min-width: 104px;
+  font-size: 1.6rem;
+  line-height: 44px;
+}
+.header__action--login {
+  margin-right: 7px;
 }
