--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,14 @@ body {
 .container {
   max-width: calc(100% - 48px);
   width: 1170px;
+  /* can giua */
   margin: 0 auto;
 }
 a {
+  /* loai bo dau gach chan */
   text-decoration: none;
 }
+/* nut btn */
 .btn {
   display: inline-block;
   min-width: 205px;
@@ -89,4 +92,69 @@ header {
 }
 .header__action--login {
   margin-right: 7px;
+}
+/* =====================hero====================== */
+.hero {
+  display: flex;
+  padding-top: 76px;
+  align-items: center;
+}
+.hero__content {
+  width: 44%;
+}
+.hero__media {
+  /* co tac dung chiem het khoang khong gian con lai */
+  flex: 1;
+}
+.hero__heading {
+  /* width: 517px; */
+  color: #fff;
+  font-size: 7rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.14; /* 114.286% */
+  letter-spacing: -1.4px;
+}
+.hero__desc {
+  /* width: 468px; */
+  margin-top: 22px;
+  color: #c9d2da;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67; /* 166.667% */
+}
+.hero__row {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+  column-gap: 38px;
+}
+.hero__phone {
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.67; /* 166.667% */
+}
+.hero__images {
+  display: flex;
+  align-items: center;
+  /* cho khoi ben hero__media don ve ben phai */
+  justify-content: flex-end;
+}
+
+.hero__img {
+  border-radius: 6px;
+  object-fit: cover;
+}
+.hero__img--large {
+  width: 330px;
+  height: 540px;
+  margin-right: -6px;
+  /* vi no duoc ghi truoc nen anh se nam duoi => su dung z-index de cho no nam tren */
+  z-index: 1;
+}
+.hero__img--small {
+  width: 210px;
+  height: 410px;
 }
