--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,12 +174,12 @@ header {
   background: #fff;
 }
 .service__desc,
-.section-heading {
+.services__heading {
   text-align: center;
 }
 .service__desc {
   width: 468px;
-  margin: 0 auto;
+  margin: 18px auto 0;
 }
 .service__row {
   margin-top: 70px;
@@ -238,4 +238,53 @@ header {
 }
 .service__btn {
   margin-top: 55px;
+}
+/* ========================How it works====================== */
+.work {
+  background: #f6fbff;
+  padding: 100px 0;
+}
+.work__desc {
+  width: 468px;
+}
+.work__list {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+.work-item {
+  padding: 43px;
+  border-radius: 4px;
+  background: #fff;
+  border-radius: 4px;
+  border: 16px solid #eaf6ff;
+  transition: 0.25s;
+}
+.work-item:hover {
+  border-color: #2e80ce;
+  /* dich len dich xuong theo truc y */
+  transform: translateY(-16px);
+}
+.work-item__heading {
+  color: var(--header-bg);
+  font-size: 2.6rem;
+  font-weight: 600;
+  line-height: 1.38; /* 138.462% */
+}
+.work-item__desc {
+  color: #575f66;
+  margin-top: 28px;
+  font-weight: 300;
+  line-height: 1.75; /* 175% */
+}
+.work-item__more {
+  display: inline-block;
+  margin-top: 18px;
+  color: #2e80ce;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+.work-item__more:hover {
+  color: #bd3d3d88;
 }
