--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,3 +288,45 @@ header {
 .work-item__more:hover {
   color: #bd3d3d88;
 }
+/* ====================about====================== */
+.about {
+  margin-top: 85px;
+  /* vi ben dung position anh troi khoi luon ta can tinnh toan lai */
+  padding: 85px 0 206px;
+  background-color: cyan;
+}
+.about__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about__media {
+  width: 49%;
+}
+.about-content {
+  width: 40%;
+}
+.about__img {
+  position: relative;
+}
+.about__img--big {
+  /* vi img la the inline nen se co 1 phan bi thua cuong de chua ca chu bi du xuong ta su dung df de loai bo */
+  display: flex;
+  width: 512px;
+  height: 370px;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.07);
+}
+.about__img--small {
+  position: absolute;
+  top: 121px;
+  left: 238px;
+  width: 332px;
+  height: 370px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.about-content__btn {
+  margin-top: 38px;
+}
