--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,29 @@ a {
   font-weight: 300;
   line-height: 1.67; /* 175% */
 }
+/* control btn */
+.control {
+  display: flex;
+  align-items: center;
+  column-gap: 18px;
+}
+.control__btn {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #575f66;
+  background: #fff;
+  cursor: pointer;
+  transform: 0.25s;
+}
+.control__btn:hover {
+  background: #2e80ce;
+  border-color: #2e80ce;
+  color: #fff;
+}
 /* =======================header===================== */
 header {
   padding-top: 30px;
@@ -293,7 +316,6 @@ header {
   margin-top: 85px;
   /* vi ben dung position anh troi khoi luon ta can tinnh toan lai */
   padding: 85px 0 206px;
-  background-color: cyan;
 }
 .about__row {
   display: flex;
@@ -310,8 +332,8 @@ header {
   position: relative;
 }
 .about__img--big {
-  /* vi img la the inline nen se co 1 phan bi thua cuong de chua ca chu bi du xuong ta su dung df de loai bo */
-  display: flex;
+  /* vi img la the inline nen se co 1 phan bi thua cuong de chua ca chu bi du xuong ta su dung dp de loai bo */
+  display: block;
   width: 512px;
   height: 370px;
   object-fit: cover;
@@ -329,4 +351,61 @@ header {
 }
 .about-content__btn {
   margin-top: 38px;
+}
+/* ==================team================ */
+.team {
+  padding: 85px 0;
+}
+.team-header {
+  text-align: center;
+  margin: 0 auto;
+}
+.team-header__btn {
+  margin-top: 38px;
+}
+.team__list {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
+}
+.team-item__thumb {
+  height: 290px;
+  /* dung maxw de tu dong tang ti le khop voi 100% chieu cao */
+  max-width: 100%;
+  object-fit: cover;
+  display: block;
+  transition: 0.5s;
+}
+.team-item:hover .team-item__thumb {
+  /* zoom to len 1.1 lan */
+  transform: scale(1.1);
+  transition: 0.25s;
+}
+.team-item__img-bg {
+  padding-top: 28px;
+  border-radius: 6px;
+  background: #eaf6ff;
+  overflow: hidden;
+}
+.team-item__heading {
+  margin-top: 12px;
+  color: var(--header-bg);
+  text-align: center;
+  line-height: 1.75; /* 175% */
+}
+.team-item__desc {
+  color: #575f66;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.86; /* 185.714% */
+}
+.team__control {
+  margin-top: 38px;
+  justify-content: center;
+}
+.control-icon--next {
+  /* dung rotate de xoay chieu */
+  rotate: 180deg;
 }
