--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,3 +449,90 @@ header {
   align-items: center;
   column-gap: 28px;
 }
+/* =================blog=================== */
+.blog {
+  padding: 85px 0;
+}
+.blog__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* left blog */
+.blog-content {
+  width: 40%;
+}
+.blog__heading {
+  width: 470px;
+}
+.blog__more {
+  margin-top: 28px;
+  color: var(--header-bg);
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.56; /* 155.556% */
+  text-decoration-line: underline;
+  display: inline-block;
+  /* de dau gach chan no duoc noi ra de bao quat luon ca chu g */
+  text-underline-offset: 5px;
+}
+.blog__control {
+  margin-top: 28px;
+  justify-content: flex-start;
+}
+/* right blog */
+.blog__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px;
+}
+.blog-item {
+  max-width: 270px;
+  border-radius: 12px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+  transition: 0.5s;
+}
+.blog-item:hover {
+  border-color: transparent;
+  box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+}
+.blog-item:hover .blog-item__thumb {
+  transition: 0.25s;
+  transform: scale(1.1);
+}
+.blog-item__thumb {
+  width: 270px;
+  height: 172px;
+  object-fit: cover;
+  /* de anh khoi troi ra khoi khung */
+  overflow: hidden;
+}
+.blog-item__wrap {
+  height: 172px;
+  overflow: hidden;
+}
+.blog-item__body {
+  padding: 18px 22px;
+}
+.blog-item__heading {
+  color: var(--header-bg);
+  font-weight: 600;
+  line-height: 1.62; /* 162.5% */
+}
+.blog-item__desc {
+  margin-top: 10px;
+  color: #575f66;
+  font-size: 1.4rem;
+  line-height: 1.71; /* 171.429% */
+}
+.blog-item__more {
+  display: inline-block;
+  margin-top: 12px;
+  color: var(--header-bg);
+  font-size: 1.4rem;
+  line-height: normal;
+}
+.blog-item__more:hover {
+  color: #2e80ce;
+}
