--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,3 +536,29 @@ header {
 .blog-item__more:hover {
   color: #2e80ce;
 }
+/* =======================appointment================= */
+.appointment {
+  margin: 85px 0;
+  background: #f6fbff;
+}
+.appointment__inner {
+  padding: 100px 178px;
+  text-align: center;
+}
+.appointment__heading::after {
+  margin: 18px auto 0;
+  display: block;
+  content: "";
+  width: 136px;
+  height: 2px;
+  background: #2e80ce;
+}
+.appointment__desc {
+  margin: 18px auto 0;
+  text-align: center;
+  font-size: 1.6rem;
+  max-width: 617px;
+}
+.oppointment__link {
+  margin-top: 38px;
+}
