--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ body {
   font-size: 1.6rem;
 }
 /* =======================common===================== */
+/* kieu inherit la ke thua */
+input,
+textarea,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+}
 .container {
   max-width: calc(100% - 48px);
   width: 1170px;
@@ -538,7 +546,7 @@ header {
 }
 /* =======================appointment================= */
 .appointment {
-  margin: 85px 0;
+  margin-top: 85px;
   background: #f6fbff;
 }
 .appointment__inner {
@@ -559,6 +567,109 @@ header {
   font-size: 1.6rem;
   max-width: 617px;
 }
-.oppointment__link {
+.appointment__link {
   margin-top: 38px;
+}
+/* =====================footer================== */
+.footer {
+  margin-top: 170px;
+  padding-top: 100px;
+  background: #10375c;
+  font-family: "Open Sans", sans-serif;
+}
+.footer__top {
+  display: grid;
+  grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+  column-gap: 78px;
+}
+.footer__desc {
+  margin-top: 21px;
+  color: #a9b3bb;
+  line-height: 1.75;
+}
+.footer__heading {
+  color: #fff;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+}
+.footer__list {
+  margin: 20px 0 28px;
+}
+.footer__link {
+  color: #a9b3bb;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  /* thuoc tinh nay giup cho chu khong bi xuong hang */
+  white-space: nowrap;
+}
+.footer__item {
+  margin-bottom: 10px;
+}
+.footer__link:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+.footer__social {
+  margin: 20px 0 28px;
+  display: flex;
+  column-gap: 10px;
+}
+.footer__social-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fff;
+  color: #2e80ce;
+  transition: 0.5s;
+}
+.footer__social-btn:hover {
+  background: #2e80ce;
+  color: #fff;
+  transition: 0.5s;
+  transform: scale(1.1);
+}
+.footer-form {
+  margin-top: 10px;
+  display: flex;
+  column-gap: 12px;
+}
+.footer-form__input {
+  width: 212px;
+  height: 46px;
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #406181;
+  color: #fff;
+  outline: none;
+}
+/* vi 1 so li do ma phong ta khai bao tren footer e ko dc nhan vap button nen ta phai khai bao o tren dau phan common */
+.footer-form__submit {
+  width: 108px;
+  height: 46px;
+  border-radius: 4px;
+  background: #2e80ce;
+  color: #fff;
+  border: none;
+}
+.footer-form__submit:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+.footer-form__input::placeholder {
+  color: #9ca8b1;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.footer__copyright-text {
+  padding: 28px 0 42px;
+  color: #aab3ba;
+  text-align: center;
+  font-size: 1.4rem;
+  line-height: 1.86; /* 185.714% */
+}
+.footer__copyright {
+  border-top: 1px solid #406181;
 }
